--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Righteous|Roboto|Sigmar+One"
+      rel="stylesheet"
+    />
     <title>React App</title>
   </head>
   <body>
