--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       href="https://fonts.googleapis.com/css?family=Bowlby+One+SC|Righteous|Roboto|Sigmar+One|Patua+One"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>GIFR</title>
   </head>
   <body>
     <div id="root"></div>
